Sat Jun 28 19:41:23 UTC 2008 / Carlos Rodrigues <cefrodrigues@gmail.com>

 * drivers/megatec.c:
   - Add parameters to set DTR and RTS explicitly in case the default values
     don't work.
   - Allow the UPS load value to be undefined.
   - Send an "I" command before detection because some models seem to
     require it.
   - Do nothing in upsdrv_cleanup if the file descriptor is invalid (to shut
     up a warning displayed when running "megatec -h").

Sat Jun 28 14:25:42 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - configure.in, scripts/hal/Makefile.am: generate ups-nut-device.fdi based on
   Arjen's autoconf test.

Fri Jun 27 20:27:35 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - scripts/hal/ups-nut-device.fdi: since HAL 0.5.11, "info.bus" is no longer
   used and is replaced by "info.subsystem"

Sun Jun 22 18:09:03 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - debian/rules, debian/changelog: changed version to disambiguate trunk from
   branches/Testing, and added rule to put netxml-ups driver in nut-xml
   package.

Thu Jun 19 02:26:23 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/bestfcom.c: UPS reports runtime in minutes. Patch provided by Chris
   Adams; tested against Ferrups 18KVA.

Tue Jun 17 02:36:44 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - (various): ignore auto-generated files

Tue Jun 17 02:20:48 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - scripts/misc/nut.bash_completion: added some more completion functions.

Sun Jun  8 11:14:02 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - conf/upsd.conf.sample: add MAXCONN parameter to the sample
   configuration file

Sun Jun  8 11:11:53 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplite_usb.c: don't use upsdrv_cleanup() on reconnection

Sun Jun  8 10:56:21 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/mge-xml.c, man/netxml-ups.8: use <GET_OBJECT> page instead
   of <XML_SUMMARY_PAGE> to read parameters from the UPS
